# EasyPromt

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  Makefile  README.md  activate.sh  pyproject.toml  requirements-dev.txt  requirements-full.txt  requirements.txt  run.py  setup.sh  test_basic_functionality.py  test_setup.py  validate_core_logic.py  validate_project.py
.devcontainer/: devcontainer.json
easyprompt/: __init__.py
easyprompt/cli/: __init__.py  commands.py  examples_command.py  init_command.py  interactive_session.py  main.py  search_command.py  validate_command.py
easyprompt/config/: __init__.py  settings.py  validators.py
easyprompt/indexer/: __init__.py  document_parser.py  embedding_generator.py  indexer.py  text_chunker.py
easyprompt/llm/: __init__.py  anthropic_provider.py  base_provider.py  gemini_provider.py  openai_provider.py  provider_factory.py
easyprompt/query/: __init__.py  command_generator.py  context_retriever.py  query_processor.py
easyprompt/utils/: __init__.py
easyprompt/vectordb/: __init__.py  base_vectordb.py  chromadb_adapter.py  factory.py  pinecone_adapter.py  weaviate_adapter.py
example_docs/: README.md  advanced.md
tests/: __init__.py  conftest.py
tests/e2e/: test_full_flow.py  test_minimal_flow.py  test_working_flow.py
tests/integration/: __init__.py  test_document_indexer.py  test_query_processor.py
tests/unit/: __init__.py  test_chromadb_adapter.py  test_cli_commands.py  test_config.py  test_document_parser.py  test_embedding_generator.py  test_llm_providers.py  test_text_chunker.py
